# SE-489_TeamOps

./: .gitignore  .pre-commit-config.yaml  Makefile  Phase1.md  Phase2.md  Phase3.md  README.md  cloudbuild.yaml  data.dvc  docker-compose.yaml  models.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cloudbuild.yaml  cml.yaml  dockerhub.yaml  test.yaml
dockerfiles/: entrypoint.sh  predict_model.dockerfile  server.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlfow/0/: meta.yaml
mlfow/384763813273724445/: meta.yaml
mlfow/384763813273724445/a6abba7ac9134d6b85abcf870efa5702/: meta.yaml
mlfow/384763813273724445/a6abba7ac9134d6b85abcf870efa5702/params/: id2label  logging_dir
mlfow/384763813273724445/a6abba7ac9134d6b85abcf870efa5702/tags/: mlflow.source.name
mlfow/384763813273724445/e25c605f42b84510ad49094ea3d8e540/: meta.yaml
notebooks/: testing_model.ipynb
requirements/: requirements.txt  requirements_dev.txt  requirements_manual.txt
server/: main.py
streamlit/: homepage.py
team_ops/: __init__.py  custom_logger.py  hydra_config.py  model.py  predict_model.py  train_model.py
team_ops/conf/: config.yaml  data.yaml
team_ops/conf/experiments/: exp1.yaml  exp2.yaml
team_ops/data/: make_dataset.py
team_ops/models/: __init__.py  eval.py  model.py  model_cml.py  predict_model.py  train_model.py
team_ops/reports/cls_report/: cls_report_1  cls_report_1.txt
tests/: test_data.py  test_inference.py  test_train.py  utils.py
yaml/: prometheus.yaml
(+18 files in other folders)
